restructure auto around reflection yay